syntax = "proto3";
package me.trinopoty.protobufRpc.codec;

option java_outer_classname = "WirePacketFormat";

enum MessageType {
    MESSAGE_TYPE_NONE = 0;
    MESSAGE_TYPE_REQUEST = 1;
    MESSAGE_TYPE_RESPONSE = 2;
    MESSAGE_TYPE_ERROR = 3;
    MESSAGE_TYPE_OOB = 4;
}

message ServiceIdentifier {
    int32 serviceIdentifier = 1;
    int32 methodIdentifier = 2;
}

message WirePacket {
    int64 messageIdentifier = 1;
    MessageType messageType = 2;

    ServiceIdentifier serviceIdentifier = 11;

    bytes payload = 16;
}

message ErrorMessage {
    string message = 1;
}